logging/kibana/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: kibana
  namespace: logging
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-kibana
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Kibana Dashboard"
spec:
  tls:
  - hosts:
    - kibana.thuault.com
    secretName: kibana-tls
  rules:
  - host: kibana.thuault.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana
          servicePort: 5601
